# samdul99food

./: .firebaserc  Dockerfile  README.md  pyproject.toml
.firebase/: hosting.cHVibGlj.cache
note/: mnist.h5  mnist.py  mnist_load.py  mnist_load2.py
public/: index.html  index.html.local
src/samdul77food/: .main.py.swp  main.py
~/tmp/foodcsv/: food.csv
